--- a/wk13/DomExcercise/dom1/dom.html
+++ b/wk13/DomExcercise/dom1/dom.html
@@ -30,10 +30,10 @@
 		var opacity = 0;
 
 		for (let i = 0; i < innerDivs.length; i++) {
-			opacity = i/innerDivs.length;
-			innerDivs[i].style.backgroundColor = 'rgba(0,255,255,'+opacity+')';	
+			// opacity = i/innerDivs.length;
+			// innerDivs[i].style.backgroundColor = 'rgba(0,255,255,'+opacity+')';	
 
-			var rand = parseInt(Math.random*3);
+			var rand = parseInt(Math.floor(Math.random*3));
 			switch(rand){
 				case 0:
 					innerDivs[i].style.backgroundColor = 'rgba(0,255,255,'+opacity+')';	
