--- a/wk13/DomExcercise/dom5/dom.html
+++ b/wk13/DomExcercise/dom5/dom.html
@@ -12,8 +12,8 @@
 		<div>box 0</div>
 		<div>box 1</div>
 		<div>box 2</div>
-		<!-- <div>box 3</div>
-		<div>box 4</div>
+		<div>box 3</div>
+		<!-- <div>box 4</div>
 		<div>box 5</div>
 		<div>box 6</div>
 		<div>box 7</div> -->
@@ -40,22 +40,16 @@
 		return sTree;
 	}
 	//---------------------------------------------
-	var container = document.querySelector('#container');
-	var childArray = container.children;
-
+	var container = document.querySelectorAll('#container>div');
+	// var childArray = container.children;
 	var treeSizes = [];
 	var treeColors = [];
-	for (let i = 0; i < childArray.length; i++) {
+	for (let i = 0; i < container.length; i++) {
 		treeSizes.push(Number(prompt('height of tree:')));
 		treeColors.push(prompt('red, yellow, blue'));
-	}
 
-	for (let i = 0; i < childArray.length; i++) {
-		childArray[i].innerHTML = makeTree(treeSizes[i]);
-	}
-
-	for (let i = 0; i < childArray.length; i++) {
-		childArray[i].style.color = treeColors[i];		
+		container[i].innerHTML = makeTree(treeSizes[i]);
+		container[i].style.color = treeColors[i];
 	}
 
 	</script>
