--- a/wk13/Traversal/Parent_Children/parentChildren.html
+++ b/wk13/Traversal/Parent_Children/parentChildren.html
@@ -27,7 +27,15 @@
 	</div>
 
 	<script type="text/javascript">
-	
+		var me = document.querySelector('#me');
+
+		me.style.backgroundColor = 'red';
+
+		me.parentNode.className += 'orangeBackground';
+
+		me.children[0].className += 'yellowBackground';
+
+		me.children[1].className += 'greenBackground';
 	
 	</script>
 	
