--- a/wk13/Traversal/Colors/colors.html
+++ b/wk13/Traversal/Colors/colors.html
@@ -13,16 +13,35 @@
 		<div>child 1</div>
 		<div>child 2</div>
 		<div>child 3</div>
-		<div>child 4</div>
+		<!-- <div>child 4</div>
 		<div>child 5</div>
 		<div>child 6</div>
-		<div>child 7</div>
+		<div>child 7</div> -->
 
 	</div>
 
 	<script type="text/javascript">
-	
+		// var container = document.querySelector('#container');
+		// var containerChildren = container.children;
 
+		var containersChildren = document.querySelectorAll('#container>div');
+
+		var colors = [];
+		for (let i = 0; i < containersChildren.length; i++) {
+			colors.push(prompt('enter colors for ' + i + '(yellow, green, blue)'));
+
+			switch(colors[i]){
+				case 'yellow':
+					containersChildren[i].className+= 'yellowBackground'; 
+				break;
+				case 'green':
+					containersChildren[i].className+= 'greenBackground'; 
+				break;
+				case 'blue':
+					containersChildren[i].className+= 'blueBackground'; 
+				break;
+			}
+		}
 	</script>
 	
 </body>
