events ex completed

--- a/wk13/Events/Event_01/Untitled-1.html
+++ b/wk13/Events/Event_01/Untitled-1.html
@@ -19,8 +19,24 @@
 	</div>
 
 	<script type="text/javascript">
+		function changeColor(){
+			var box = document.querySelector('#box0');
+			box.style.backgroundColor = 'red';
+			box
+		};
 		
+		var box = document.querySelector('#box0');
+		box.addEventListener('click', changeColor);
+		
+		function changeColorBlue(){
+			var box = document.querySelector('#box1');
+			box.classList.toggle('blueBackground');
+		}
 
+		var box1 = document.querySelector('#box1');
+		box1.addEventListener('click',changeColorBlue);
+
+		
 	</script>
 </body>
 </html>
