--- a/wk13/DOM Event Practice/cardGen/card.html
+++ b/wk13/DOM Event Practice/cardGen/card.html
@@ -27,8 +27,8 @@
         <div class="settings">
             <h2>Customise your card</h2>
 
-            <input type="text" id="name">
-            <input type="text" id="position">
+            Name: <input type="text" id="name"><br>
+            Position: <input type="text" id="position"><br>
             <input type="button" value="Make card" id="submit">
         </div>
     </div>
