changes to card

--- a/wk13/DOM Event Practice/lazyCardGen/card.html
+++ b/wk13/DOM Event Practice/lazyCardGen/card.html
@@ -35,12 +35,12 @@
                     <option value="Sigmar One">sigma one</option>
                     <option value="Fredericka the Great">fredericka the great</option>
                 </select> <br>
-            Choose border <br>
+            <!-- Choose border <br>
             <select name="" id="">
                     <option value=""></option>
                     <option value=""></option>
                     <option value=""></option>
-                </select> <br>
+                </select> <br> -->
             Specify your message <br>
             <textarea name="" id="text" cols="30" rows="10" placeholder="Greeting"></textarea> <br>
             <input type="submit" id="submit">            
