--- a/wk14/anotherImageSlider/index.htm
+++ b/wk14/anotherImageSlider/index.htm
@@ -5,16 +5,14 @@
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/base-min.css">
 
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
 	<link rel="stylesheet" href="assets/css/styles.css">
 	<title>Document</title>
 </head>
 <body>
 	<div class="image-slider">
 
-		<i class="fas fa-chevron-circle-left"></i>
-		<i class="fas fa-chevron-circle-right"></i>
-
-		<div class="slides">
+		<div class="slides-left">
 			<img src="assets/images/image1.jpg" alt="">
 			<img src="assets/images/image2.jpg" alt="">
 			<img class="current" src="assets/images/image3.jpg" alt="">
@@ -22,6 +20,10 @@
 			<img src="assets/images/image5.jpg" alt="">
 			<img src="assets/images/image6.jpg" alt="">
 			<img src="assets/images/image7.jpg" alt="">
+		</div>
+		<div class="slides-right">
+			<i class="fas fa-chevron-circle-left"></i>
+			<i class="fas fa-chevron-circle-right"></i>
 		</div>
 	</div>
 	
