--- a/wk14/anotherImageSlider/index.htm
+++ b/wk14/anotherImageSlider/index.htm
@@ -13,10 +13,10 @@
 	<div class="image-slider">
 
 		<div class="slides-left">
-			<img src="assets/images/image1.jpg" alt="">
-			<img src="assets/images/image2.jpg" alt="">
+			<img class="older" src="assets/images/image1.jpg" alt="">
+			<img class="old"  src="assets/images/image2.jpg" alt="">
 			<img class="current" src="assets/images/image3.jpg" alt="">
-			<img class="old" src="assets/images/image4.jpg" alt="">
+			<img src="assets/images/image4.jpg" alt="">
 			<img src="assets/images/image5.jpg" alt="">
 			<img src="assets/images/image6.jpg" alt="">
 			<img src="assets/images/image7.jpg" alt="">
