updated component ex

--- a/wk14/myComponent/index.html
+++ b/wk14/myComponent/index.html
@@ -6,11 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <!-- list slider -->
-
+    <div class="container">
+        <div class="sidebar">
+            <div class="item1 current-item" data-target=".slide1">Lorem, ipsum.1</div>
+            <div class="item2" data-target=".slide2">Lorem, ipsum.2</div>
+            <div class="item3" data-target=".slide3">Lorem, ipsum.3</div>
+        </div>
+        <div class="slides">
+            <div class="slide1 current">
+                <h1>Lorem ipsum dolor sit amet.1</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione assumenda ea consectetur provident id explicabo veniam? Numquam quae molestiae doloribus.</p>
+            </div>
+            <div class="slide2">
+                <h1>Lorem ipsum dolor sit amet.2</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias omnis voluptatum explicabo sit neque at dolores debitis quasi iure. Aspernatur.</p>
+            </div>
+            <div class="slide3">
+                <h1>Lorem ipsum dolor sit amet.3</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora est corporis sint minus dolore, consequuntur quae pariatur laboriosam maxime. Corporis!</p>
+            </div>
+        </div>
+    </div>
 
     <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
