--- a/wk14/myComponent/index.html
+++ b/wk14/myComponent/index.html
@@ -12,24 +12,77 @@
 </head>
 <body>
     <div class="container">
+        <div class="triangles">
+            <div class="triangle action1"></div>
+            <div class="triangle1 current-triangle"></div>
+            <div class="triangle2"></div>
+            <div class="triangle3"></div>
+            <div class="triangle4"></div>
+        </div>
         <div class="sidebar">
-            <div class="item1 current-item" data-target=".slide1">Lorem, ipsum.1</div>
-            <div class="item2" data-target=".slide2">Lorem, ipsum.2</div>
-            <div class="item3" data-target=".slide3">Lorem, ipsum.3</div>
+            <div><h2>LoremTIMES</h2></div>
+            <div class="item1 current-item" data-target=".slide1" data-triangle=".triangle1" data-action="action1">いろはにほへと</div>
+            <div class="item2" data-target=".slide2" data-triangle=".triangle2" data-action="action2">わかよたれそ</div>
+            <div class="item3" data-target=".slide3" data-triangle=".triangle3" data-action="action3">うゐのおくやま</div>
+            <div class="item4" data-target=".slide4" data-triangle=".triangle4" data-action="action4">あさきゆめみし</div>
         </div>
         <div class="slides">
             <div class="slide1 current">
-                <h1>Lorem ipsum dolor sit amet.1</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione assumenda ea consectetur provident id explicabo veniam? Numquam quae molestiae doloribus.</p>
+                <h1>いろはにほへと　ちりぬるを</h1>
+                <p>
+                    覧ワオ岸導えこラぴ年動ロ北高ク知玉れ少越てずとっ確玉街純ひざ権研とわク経誕しがン書重せー事誌玉っごむ。機トケホハ判図どばょ線道ゆぜすふ要性ムホヱツ紙丸たれこ上記ヒヱツ好報経界リ遷春10朝ヌモケヱ作8犯ツネフヨ振38出マ大展サケソラ長50業きしろ調定答どがルフ。始チヘワシ語禁害応ゅ報多つお投製んぴ環別ゅンうも読産枠ワス換東で暑判シ振84街ツテ譲行レフし別報ルモ終放消まろでち。<br><br>
+
+                    界ょ掲作ヱヌワ空則ソリミ面稿エ要業ぎえがー億催性17開滋ふもこぱ細選ヤウ死内オ秋嗣坪こ。潟転ナルセリ連毎さぱな性量未ぜこげゅ文無アサ韓雪は勢修ル専68入ー治明ナ宅芸立トラこ士田ソ症持シ告躍ぴぱー識崎べだスば庫米路順互ぜふ。供本ド覚9保でド像球はトけ国学りぽぜか過疑づ聞源政サリニヘ受本ハト公5備コヲホレ組6質ケ敗緯しんで備聞ほきでし次情線アヲ岐暫械分かゃ。<br><br>
+
+                    東んりせみ府転ケ画65処殿な度古制すリ悪式れぞつ消今サ相久中うぐぜト何女メ演制シヒテフ商集セソフ暮端者めむべ。野リレヱウ広会国ぐ託鳥つ思83左誠懲汚1出フロウ録報ち計護エ会正トせ給視ふだぎ面投カニヨ途属コヨ試八べ。症まゃつど貢無第え増女中テタラユ男者んふ捨破リ千経ミルハ投人んや実口ルまどょ習張どすほの家3好ほをい卓様スサヌテ克並タレス部75紙初郎ヌヤ平米届や。<br><br>
+
+                    載ほゅ求83写立マ期学ひ加夜松人マセ新既ヤユノ緻中ス覧速ち査売ケリハヘ技提ヤ開済せづん統件ヒ渡催レムニ村際でりゆ事食ム合視レ買能え北藤か。大点68本別69通だぱひ者曜ぱどゅ放愛リ学純ネヲサ被宮必フエソコ働済くきこり出臣辞ごょへよ望電マ歩輪ウキイム康載げリおク配情びかさ典税ぶゅばル図歩ご。<br><br>
+
+                    87書ら感旅提ろ内割めリけお険募モアコツ詳聞ド抗購ニネヘタ帯内カナ診耕券づトリ次闘ルフイ提39天近刻草ト。教チオ浩影テリス教撤アフ探禁京たねく誠6菌位えっー関吾セ的大ヒイヱミ核経ま事底月再票偏れイづぎ。収だびゆ投変ア頭的えひだ北上る野上たな上春ヌ覧合大あちぜ待76解動稚31断帆らしスぎ習知リどすあ咲図キ書速ロハチケ水第約退ごびお。<br><br>
+                </p>
             </div>
             <div class="slide2">
-                <h1>Lorem ipsum dolor sit amet.2</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias omnis voluptatum explicabo sit neque at dolores debitis quasi iure. Aspernatur.</p>
+                <h1>わかよたれそ　つねならむ</h1>
+                <p>
+                    木だこ亡縄シイコア得選針ハソ退港ふスお議裏くうのリ側止ノルナ歩5受埼物シヌク温素ぶごょレ関面ク店間ごフ料意作ヤテ記声ソ挑米俣じひほ。無ぎトやべ経除フ件治レぼーれ断受ほト晃迎め殺性出なきがて味治トセ持作民かー右礼シワニ信痢サモル数98買非星げ。治ほ方80球スロ長奈べラもめ多戒あぜむと気遺ソス印無ざ掲提サラ欠知ワ新属ヲチハル屋襲ルお現1懲悦76象でばゅイ式仰巣毅閲ルまイ。<br><br>
+
+                    7北覧水だ員記りや特蒙賞じい感暮てな自不りょイ兼陰クホキ導出な損取クヌヤネ部属応界らの選全住頑勲悔ぽでづ。資イアセウ合1食さ本歴ヨ条解トはくつ記局ホタスイ手佐どうに必申ちぼ公式ざわぎ読程こ県会こぜう米増キツ勝用サケユモ宣読ソセケエ継方ぞけ官芸スレフ井95健更っむ約叟噂愉とうずイ。<br><br>
+
+                    社ど要人ヌチセ再映甲エヌシヲ小境キケナロ高宮リタヤモ了器づドせあ分楽へまとつ商1斉ゆ並将こもス属文吏坦ス。県85良悟リ指輩ア授打そひいた毎夫アヒ能局あ下上ウアワ並徴これぼ更東地せらゆ権課モ本事ーゅろ香帯す駆供ラモキヱ受禁ばル任状ば万2立べル月展曜あゆ。投東リや委立ツ国負ほ念大コ身光虐スハ直英モタ和紙こンに報目販ぶっろ入8軍モムコク臓辞67伯堤墜搬あル。<br><br>
+
+                    告や導65性ヌイタ無48警ぱや一際ヌロ意率メタリ党索ヤモウソ三突ニ覧者ぎづほけ禁葉エロ間表いで参午すぜ変全余ラ明求ふゅぼ補録詐でひぎ振質ヱエヤ無冤冶凋ふスレ。資だぶあい禁問読に完理せぽフう喜町て家家ぞぽ梨覧ラキヱス利85正ウケア中権スホ採真果真ずねじ支表本ネメツ申要ラい。年エ養芸ヤヒネ型紀ヤチヨヌ画政べざ周園覧リク督的康区ルふ非20藤ロチミ論人でろれて先個過受切ぼがげち。<br><br>
+
+                    <!-- 25音ぎル陸平ふぱべづ点仕ウロ掲6奪いえぽむ武19禁ス気者うつけ襲徳だょぎで地墜ク必生玲てク形川リ性夢分そリ家竹ノス釈更派ヒ無同尊領博及ぽたびっ。第ラだば界理く触米せ者続警こかよ争中ちもつ歩現ウハ水6治間コエ岡応トイ著置カワ一導ーまふな問明ルによ社容ミ格込辺イすぎ。<br><br> -->
+                </p>
             </div>
             <div class="slide3">
-                <h1>Lorem ipsum dolor sit amet.3</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora est corporis sint minus dolore, consequuntur quae pariatur laboriosam maxime. Corporis!</p>
+                <h1>うゐのおくやま　けふこえて</h1>
+                <p>
+                    替じろ必光くょクま絡聞養ナワミオ要見そかぐも的事治わぜず康左4毛のし土長らみー入警こス向件退リク行事ネチ問得産ヱモナカ同由ホヤハ催沖鹿別むえこで。経おごく膨読は質面サヲ要合コ鋭永一ぞゃが政海ミト開思づどつト情強70面更といつ宏会なえうき祈毎ふトちば行般メ査手40向ユノ制調ぜねリよ待1異開ふ。<br><br>
+
+                    念にぜね森天図属動ラナメヌ験暗のしく掲文スメ一地げでルッ投41飾タモラ広視やで文審サ祭限テ無広木説びけね。質サワミイ治3傷チ質質欺ご詳伝地ー都42能フアヲ会出表オ護二すーでゆ万弁真ら。方ヨ到将ねリらゅ熊詰でド掲自ずこり大可暖イクラ真掲フマテル王農ず公立ラむず成悔マオホ与開重さ用料びつとイ投聞ーこのび掲60野て静覚っ。<br><br>
+
+                    調ヌカユ田国メチ救景つおレ文東す州81需ぴ猛保ふごへえ岡行ノ行江吉クるぐ月工ム観財レスナ卒野チヤヌ来道職話ニ康線チハ難題ねはづ後末隊除す。元なト禁州ずばでこ解傾セアヒソ訳年しひにス提65情トさ中歩防血な場失ユロケ取康オリチ上優ぜし視59米在リのめね画用じぴ独門じ表感ケタメル大73護みン整対ふルる。<br><br>
+
+                    生モ時無クヱ天決やちづ難本最ロアメ要6広演えい来換す者千だ川順え布意ヨソト面系容謙ゅさぱッ。複レほへ経示イヱ載有ら間田ロマ女法モヤクタ会帯野史話キヨ期進まン金常ぱみ竹69村亮けクみ。正タ品9東ワアウノ自警ヤム界復ッごえふ無級ざむと平95直イ訴6烏リホミ応指ヱシニ単状べもき足角ま話馬妻属めつまな。<br><br>
+
+                    勝ツチサニ頂小えょス祝資定室ソケヤエ食道くっ連流武とレ介間わぼがト民線コトモ通無投ネ刑視騎ょぐド暮種態克ほびゆば。作こぎ負詳かくさご悩無ヲハヤ流訪みでぴ会齢芸要ナエト声94連おでイ王84刊オ宅映埋詰軟うつへぐ。会びさ体極キハナソ度碁トヒシ交告ふしあん受教児ょどあご発会ッ露3町クレセフ史社サヤ著題ゅぼら要推ぼげ語具テシチ十驚べぽ男措テホセ合三以すク。<br><br>
+                </p>
             </div>
+            <div class="slide4">
+                <h1>あさきゆめみし　ゑひもせす</h1>
+                    <p>
+                        載富レイメヌ有健にゃこあ政作ヤツケ軍野クヤメシ量紹はぶへけ戒10健つと記者ツネ会端ぎ岡保フコヱ供育ナフ後内ニフ線2覧チラ太越器敗香で。齢ン告価敏ユヒ登長ょリ場現禁覚ドぐ毎注だ事気県テソ因飛ナス速綱フルドを開史ね大流びぜト面54本テヒエ治寄静不慶さはじも。者ずる陸座リぼげ税豊ふょへ用野はをドわ信経救カロ計府始てえじ億対2点ケレワツ徳書ゆのー報向止オ真経の劇春環困摘じす。<br><br>
+
+                        記つで化康降原懸ノ質霊イヒ軍球に購購高サモヒ勝志なえ名41稚っ法労エウリサ介政わ稿政おリばに中了難敷きね。1米チヘシナ月技者カナヌソ真能営割コロカ料25芸っじ氷短はかリ会稿ぴに昨囲ムワマ詳博及司深のげわ。静チクユル懲前てぞ枠書う練年サ通書ロサ賞逃ぐくちづ性欺マフレヘ加任責ッけゃに輸紙ア追書ト完西岡テヌ及編実親いゆ。<br><br>
+
+                        期セ薬党ばのれ草望環校82図身コミ準努72載ワ号聞フネナノ全児ぼる止掲ンうイ輪浜カタ確護ネヌケメ蒼73庫韓具副だびクか。図恒モ表野53員べいぴば明太ドぼ覧文あ死生イね嫌沖ま和高んトイレ下娘ぜびてり化止ウ表昨提込態わょりき。属ヨコマ北5植カムヤツ成芸わじ概来ずくへ整減万要すびリ場係わ実川み首伝ん済無メツ治生ホヨノ厳事ヘソユミ滞海しイぼあ利準タツ製易太へざ。<br><br>
+
+                        上相らドたせ治書ちげ考意制ば作元セテ真治マチヱ和検そねど歳際ぐルむ田痛アシミ田17席ど類仕にのひび。各ルワリ堀府てま閣優た児敗タト田廟げあねぽ平闘エウオミ橋1達ミ限等ごはほ割2測容ナホヲシ戦反えレなゅ増投ツハソ影経き財水模ごびぜ。内トろ体分ユニスホ度代証ぽ小蚕む精道へリ挙携働65前カ間6地カ真会つラみて際終ホエソナ続運増際占ぜ業系ツユレ支孝匹恒すど。<br><br>
+
+                        入ゆレたず親談リレト舞崎1先るべちな定語ワレ恵育んま氏言だルぼ張真モイ交踏ヌクナカ祖稿徴レ狩政っスば提松トー量地ケ衝情めゆひー部真シ話彦みぎラゆ原解キユコ期34常書ょ。10年けやり葉南ソホエ力事宿テフヘ玉済そ択必みわかね酒将ト論介ねせお切読12度加罪報ルヱ暮歩ヤヱケ席横通びーだ敏官モマエ爺誤をじび社程ぐかす。<br><br>
+                    </p>
+                </div>
         </div>
     </div>
 
