--- a/wk17/practice_anime/index.html
+++ b/wk17/practice_anime/index.html
@@ -12,23 +12,109 @@
 <body>
 
     <div class="container">
-        <div class="row">
-            <div class="col">Lorem.</div>
-            <div class="col">Consequuntur.</div>
-            <div class="col">Repellat.</div>
+        <div class="section section1">
+            <!-- <nav class="navbar navbar-dark bg-primary"></nav> -->
+            <div class="jumbotron">
+                <h1>Section1</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae, dolor.</p>
+                <a href="" class="btn btn-primary btn-md">Learn more</a>
+            </div>
+            <div class="cards">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card card1">
+                            <!-- <img src="" alt="" class="card-img-top"> -->
+                            <div class="card-body">
+                                <h5 class="card-title">Lorem, ipsum.</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, rerum?</p>
+                                <a href="" class="btn btn-primary">Lorem.</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card card2">
+                            <!-- <img src="" alt="" class="card-img-top"> -->
+                            <div class="card-body">
+                                <h5 class="card-title">Lorem, ipsum.</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, rerum?</p>
+                                <a href="" class="btn btn-primary">Lorem.</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            <div class="col">Lorem.</div>
-            <div class="col">Culpa?</div>
-            <div class="col">A.</div>
-            <div class="col">Facere.</div>
+        <div class="section section2">
+            <!-- <nav class="navbar navbar-dark bg-primary"></nav> -->
+            <div class="jumbotron">
+                <h1>Section2</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae, dolor.</p>
+                <a href="" class="btn btn-primary btn-md">Learn more</a>
+            </div>
+            <div class="cards">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card card1">
+                            <!-- <img src="" alt="" class="card-img-top"> -->
+                            <div class="card-body">
+                                <h5 class="card-title">Lorem, ipsum.</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, rerum?</p>
+                                <a href="" class="btn btn-primary">Lorem.</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card card2">
+                            <!-- <img src="" alt="" class="card-img-top"> -->
+                            <div class="card-body">
+                                <h5 class="card-title">Lorem, ipsum.</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, rerum?</p>
+                                <a href="" class="btn btn-primary">Lorem.</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div class="section section3">
+                <!-- <nav class="navbar navbar-dark bg-primary"></nav> -->
+                <div class="jumbotron">
+                    <h1>Section3</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae, dolor.</p>
+                    <a href="" class="btn btn-primary btn-md">Learn more</a>
+                </div>
+                <div class="cards">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="card">
+                                <!-- <img src="" alt="" class="card-img-top"> -->
+                                <div class="card-body">
+                                    <h5 class="card-title">Lorem, ipsum.</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, rerum?</p>
+                                    <a href="" class="btn btn-primary">Lorem.</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="card">
+                                <!-- <img src="" alt="" class="card-img-top"> -->
+                                <div class="card-body">
+                                    <h5 class="card-title">Lorem, ipsum.</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, rerum?</p>
+                                    <a href="" class="btn btn-primary">Lorem.</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<script src="assets/anime.min.js"></script>
+    <script src="assets/anime.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
 	<script src="assets/script.js"></script>
 </body>
 </html>
