--- a/wk17/animeParallax_blue_template/index.htm
+++ b/wk17/animeParallax_blue_template/index.htm
@@ -10,19 +10,20 @@
 	
 	<div class="wrapper">
 		<section class="section section1">
-			<div class="layer layer0"></div>
-			<div class="layer layer1"></div>
-			<div class="layer layer2">
-				<h1>The New Dawn</h1>
+			<div class="viewport">
+				<div class="layer layer0"></div>
+				<div class="layer layer1"></div>
+				<div class="layer layer2"></div>
+				<div class="layer layer3"></div>
+				<div class="layer layer4"></div>
+				<div class="layer layer5"></div>
+				<div class="layer layer6"></div>
+				<div class="layer layer7"></div>
+				<div class="layer layer8"></div>
+				<div class="layer layer9"></div>
+				<div class="layer layer10"></div>
+				<div class="layer layer11"></div>
 			</div>
-			<div class="layer layer3"></div>
-			<div class="layer layer4"></div>
-			<div class="layer layer5"></div>
-			<div class="layer layer6"></div>
-			<div class="layer layer7"></div>
-			<div class="layer layer8"></div>
-			<!-- container for content -->
-			<div class="container"></div>
 		</section>
 		<section class="section section2"></section>
 		<section class="section section3"></section>
@@ -31,8 +32,6 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="assets/anime.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script> 
-
 	<script src="assets/script.js"></script>
 </body>
 
