--- a/wk18/formative2.2/index.html
+++ b/wk18/formative2.2/index.html
@@ -2,14 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=S, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/styles.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="section1 container">
+        <div class="viewport">
+            <div class="layer layer1">1</div>
+            <div class="layer layer2">2</div>
+            <div class="layer layer3">3</div>
+            <div class="layer layer4">4</div>
+            <div class="layer layer5">5</div>
+        </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="assets/anime.min.js"></script>
 	<script src="assets/script.js"></script>
