--- a/wk18/formative2.2/index.html
+++ b/wk18/formative2.2/index.html
@@ -11,15 +11,21 @@
 <body>
     <div class="section1 container">
         <div class="viewport">
-            <div class="layer layer1">1</div>
-            <div class="layer layer2">2</div>
-            <div class="layer layer3">3</div>
-            <div class="layer layer4">4</div>
+            <div class="layers" id="scene">
+                <div class="layer layer0">0</div>
+                <div class="layer layer1" data-depth="0.15">1</div>
+                <div class="layer layer2" data-depth="0.2">2</div>
+                <div class="layer layer3" data-depth="0.25">3</div>
+                <div class="layer layer4" data-depth="0.3">4</div>
+                
+            </div>
             <div class="layer layer5">5</div>
+            <div class="layer layer6">5</div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="assets/anime.min.js"></script>
+    <script src="assets/anime.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 	<script src="assets/script.js"></script>
 </body>
 </html>
