added jquery form validation

--- a/wk18/formative2.2/index.html
+++ b/wk18/formative2.2/index.html
@@ -13,13 +13,15 @@
         <div class="viewport">
             <div class="layers" id="scene">
                 <div class="layer layer0">0</div>
-                <div class="layer layer1" data-depth="0.15">1</div>
-                <div class="layer layer2" data-depth="0.2">2</div>
-                <div class="layer layer3" data-depth="0.25">3</div>
-                <div class="layer layer4" data-depth="0.3">4</div>
+                <div class="layer layer1" data-depth="0.01">1</div>
+                <div class="layer layer2" data-depth="0.015">2</div>
+                <div class="layer layer3" data-depth="0.02">3</div>
+                <div class="layer layer4" data-depth="0.025">4</div>
                 
             </div>
-            <div class="layer layer5">5</div>
+            <div class="layer layer5 ">
+                <div class="singleMushroom bounce-5">5</div>
+            </div>
             <div class="layer layer6">5</div>
         </div>
     </div>
