--- a/wk18/formative2.2/index.html
+++ b/wk18/formative2.2/index.html
@@ -4,26 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <link rel="stylesheet" href="assets/animate.css">
     <link rel="stylesheet" href="assets/styles.css">
     <title>Document</title>
 </head>
 <body>
     <div class="section1 container">
         <div class="viewport">
-            <div class="layers" id="scene">
+            <div class="layers parallax" id="scene">
                 <div class="layer layer0">0</div>
                 <div class="layer layer1" data-depth="0.01">1</div>
-                <div class="layer layer2" data-depth="0.015">2</div>
-                <div class="layer layer3" data-depth="0.02">3</div>
-                <div class="layer layer4" data-depth="0.025">4</div>
-                
+                <div class="layer layer2" data-depth="0.02">2</div>
+                <div class="layer layer3" data-depth="0.03">3</div>
+                <div class="layer layer4" data-depth="0.04">4</div>
             </div>
-            <div class="layer layer5 ">
+            <div class="layers layer5">
                 <div class="singleMushroom bounce-5">5</div>
             </div>
-            <div class="layer layer6">5</div>
+            <div class="layers layer6">
+                <div class="singleSlime bounce-5">6</div>
+            </div>
+            <div class="layers layer7">
+                <div class="singlePig bounce-5"></div>
+            </div>
+            <div class="layers layer8">
+                <div class="mushroom mushroom1"></div>
+                <div class="mushroom mushroom2"></div>
+                <div class="slime slime1"></div>
+                <div class="slime slime2"></div>
+                <div class="pig pig1"></div>
+                <div class="pig pig2"></div>
+            </div>
+            <div class="layers layer9">
+                <div class="signpost">
+                    <div class="nav">
+                        <div data-target=".news">News</div>
+                        <div data-target=".story">Story</div>
+                        <div data-target=".character">Character</div>
+                        <div data-target=".community">Community</div>
+                    </div>
+                    <!-- <ul class="nav">
+                        <li><a href="#" id="news">News</a></li>
+                        <li><a href="#">Story</a></li>
+                        <li><a href="#">Character</a></li>
+                        <li><a href="#">Community</a></li>
+                    </ul> -->
+                </div>
+            </div>
+            <div class="layers layer10 animated">
+                <div class="panel news">1</div>
+                <div class="panel story">2</div>
+                <div class="panel character">3</div>
+                <div class="panel community">4</div>
+            </div>
         </div>
+    </div>
+    <!-- <div class="section2 container"> -->
+
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="assets/anime.min.js"></script>
