changes in time

--- a/wk18/formative2.2/index.html
+++ b/wk18/formative2.2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/animate.css">
     <link rel="stylesheet" href="assets/styles.css">
     <title>Document</title>
@@ -28,12 +29,12 @@
                 <div class="singlePig bounce-5"></div>
             </div>
             <div class="layers layer8">
-                <div class="mushroom mushroom1"></div>
-                <div class="mushroom mushroom2"></div>
-                <div class="slime slime1"></div>
-                <div class="slime slime2"></div>
-                <div class="pig pig1"></div>
-                <div class="pig pig2"></div>
+                <div class="mushroom mushroom1 bounce-5"></div>
+                <div class="mushroom mushroom2 bounce-5"></div>
+                <div class="slime slime1 bounce-5"></div>
+                <div class="slime slime2 bounce-5"></div>
+                <div class="pig pig1 bounce-5"></div>
+                <div class="pig pig2 bounce-5"></div>
             </div>
             <div class="layers layer9">
                 <div class="signpost">
@@ -51,11 +52,19 @@
                     </ul> -->
                 </div>
             </div>
-            <div class="layers layer10 animated">
-                <div class="panel news">1</div>
-                <div class="panel story">2</div>
-                <div class="panel character">3</div>
-                <div class="panel community">4</div>
+            <div class="layers layer10">
+                <div class="panel news">
+                    <div>News</div>
+                </div>
+                <div class="panel story">
+                    <div>Story</div>
+                </div>
+                <div class="panel character">
+                    <div>Chracter</div>
+                </div>
+                <div class="panel community">
+                    <div>Community</div>
+                </div>
             </div>
         </div>
     </div>
