--- a/wk18/formative2.2/index.html
+++ b/wk18/formative2.2/index.html
@@ -28,6 +28,8 @@
     </script>
 </head>
 <body>
+    <div class="section0 container"></div>
+
     <div class="section1 container">
         <div class="viewport">
             <div class="layers" >
@@ -105,7 +107,7 @@
             </div>
         </div>
     </div>
-    <!-- <div class="section2 container"> -->
+    <div class="section2 container">
 
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
